sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:6: error: ')' expected but integer literal found.
while(!=0){
        ^AlgBubbleSort1:17: error: illegal start of simple expression
}
^